--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,55 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.main { 
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  position: relative;
+  background-image: url('../images/rewards.jpeg');
+  background-size: cover;
+  padding-top: 20%;
+}
+
+.submit-btn {
+  background-color: #ffd54f !important;
+  color: white;
+  margin-left: -70px;
+}
+
+.content {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 30px;
+}
+
 .heading {
-  text-align: center;
+  color: white;
+  font-family: 'Pacifico', cursive;
+  margin-bottom: 30px;
+}
+
+#document {
+  color: white;
+}
+
+.result {
+  margin-top: 50px;
+}
+
+.home-link, .home-link:hover {
+  color: #ffd54f;
+}
+
+.result-heading {
+  margin-bottom: 20px;
+  font-family: 'Pacifico', cursive;
 }
