--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,19 @@
-<h1 class="heading">Reward System</h1>
-<form action="/" method="POST" enctype="multipart/form-data">
-  <label for="avatar">Choose a profile picture:</label>
-  <input type="file"
-        id="avatar" name="avatar"
-        accept=".txt">
-  <input type="submit" value="Upload">
-</form>
 
-<%= customers %>
+<div class="main container">
+  <div class="content col-8 offset-2">
+    <h3 class="heading text-center font-italic">Rewards System</h3>
+    <form action="/result" method="POST" enctype="multipart/form-data" class="row">
+      <div class="offset-3">
+        <div class="row">
+          <div class="form-group">
+            <input type="file" id="document" name="document" accept=".txt" class="form-control-file" size="70">
+          </div>
+        
+          <div class="">
+            <input type="submit" value="Calculate" class="btn submit-btn">
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
