--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="container">
     <div class="content col-8 offset-2">
-      <h3 class="heading text-center font-italic">Rewards System</h3>
+      <h3 class="heading text-center font-italic">Reward System</h3>
       <form action="/result" method="POST" enctype="multipart/form-data" class="row">
         <div class="offset-3">
           <div class="row">
