Add spec and clean up code

--- a/views/result.erb
+++ b/views/result.erb
@@ -1,5 +1,5 @@
 <div class="container result col-6 offset-3">
-  <h3 class="result-heading">Results:</h3>
+  <h3 class="result-heading">Result:</h3>
   <table class="table table-hover">
     <thead>
       <tr>
